# rocksky

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Caddyfile  Cargo.toml  Dockerfile  LEXICONS.md  README.md  backup-ddb.sh  compose.yaml  console  flake.nix  package-lock.json  package.json  turbo.json
crates/analytics/: .env.example  .gitignore  Cargo.toml  Dockerfile
crates/analytics/src/: core.rs  lib.rs  main.rs
crates/analytics/src/cmd/: serve.rs  sync.rs
crates/analytics/src/handlers/: albums.rs  artists.rs  mod.rs  scrobbles.rs  stats.rs  tracks.rs
crates/analytics/src/subscriber/: mod.rs  types.rs
crates/analytics/src/types/: album.rs  artist.rs  filters.rs  mod.rs  pagination.rs  playlist.rs  scrobble.rs  stats.rs  track.rs  user.rs
crates/analytics/src/xata/: artist.rs  artist_album.rs  loved_track.rs  playlist.rs  scrobble.rs  track.rs  user_album.rs  user_playlist.rs  user_track.rs
crates/connect/: Cargo.toml  README.md
crates/connect/src/: main.rs  websocket.rs
crates/connect/src/players/: jellyfin.rs  kodi.rs  mod.rs  mopidy.rs  mpd.rs  mpris.rs  vlc.rs
crates/feed/: Cargo.toml
crates/feed/src/: config.rs  did.rs  feed.rs  feed_handler.rs  lib.rs  r2d2_duckdb.rs  subscriber.rs  sync.rs  types.rs
crates/feed/src/feeds/: mod.rs
crates/feed/src/repo/: mod.rs
crates/feed/src/xata/: album.rs  artist.rs  mod.rs  scrobble.rs  user.rs
crates/googledrive/: Cargo.toml  Dockerfile
crates/googledrive/src/: client.rs  consts.rs  lib.rs  main.rs  scan.rs
crates/googledrive/src/cmd/: mod.rs  scan.rs  serve.rs
crates/googledrive/src/handlers/: files.rs  mod.rs
crates/googledrive/src/repo/: google_drive_directory.rs  google_drive_path.rs  google_drive_token.rs  mod.rs  track.rs
crates/googledrive/src/types/: file.rs  token.rs
crates/googledrive/src/xata/: google_drive.rs  google_drive_directory.rs  google_drive_path.rs  google_drive_token.rs  mod.rs
crates/jetstream/: Cargo.toml  Dockerfile
crates/jetstream/src/: lib.rs  main.rs  profile.rs  repo.rs  subscriber.rs  types.rs  webhook_worker.rs
crates/jetstream/src/xata/: album_track.rs  artist_track.rs  feed.rs  follow.rs  mod.rs  track.rs
crates/mirror/: Cargo.toml
crates/mirror/src/: creds.rs  crypto.rs  db.rs  dedup.rs  enrich.rs  lastfm.rs  lib.rs  listenbrainz.rs  rocksky.rs  supervisor.rs  tealfm.rs  token.rs  track.rs
crates/navidrome/: Cargo.toml
crates/navidrome/src/: api.rs  auth.rs  lib.rs  response.rs  s3.rs  typesense.rs
crates/navidrome/src/handlers/: albums.rs  artists.rs  cover_art.rs  directory.rs  genres.rs  info.rs  mod.rs  music_folders.rs  ping.rs  playlists.rs  playqueue.rs  scrobble.rs  search.rs  songs.rs  star.rs  starred.rs  stream.rs  user.rs
crates/navidrome/src/repo/: album.rs  artist.rs  genre.rs  mod.rs  nowplaying.rs  playlist.rs  playqueue.rs  scrobble.rs  starred.rs  track.rs  user.rs
crates/navidrome/src/xata/: album.rs  artist.rs  mod.rs  track.rs  user.rs
crates/pgpull/: Cargo.toml
crates/pgpull/src/: lib.rs
crates/pgpull/src/repo/: album.rs  artist.rs  loved_track.rs  mod.rs  playlist.rs  scrobble.rs  track.rs  user.rs
crates/pgpull/src/xata/: artist_album.rs  mod.rs  playlist.rs  playlist_track.rs  track.rs  user_album.rs  user_artist.rs  user_playlist.rs  user_track.rs
crates/raichu/: Cargo.toml  LICENSE_MIT
crates/raichu/src/: lib.rs
crates/rocksky-nif/: Cargo.toml  build.rs
crates/rocksky-nif/src/: lib.rs
crates/rocksky-sdk/: Cargo.toml  README.md
crates/rocksky-sdk/examples/: quickstart.rs
crates/rocksky-sdk/scripts/: gen-lexicons.sh
crates/rocksky-sdk/src/: agent.rs  app_bsky.rs  app_rocksky.rs  appview.rs  auth.rs  builder_types.rs  com_atproto.rs  dedup.rs  error.rs  facets.rs  jetstream.rs  lib.rs  library.rs  namespaces.rs
crates/rocksky-sdk/src/app_bsky/: actor.rs
crates/rocksky-sdk/src/app_rocksky/: actor.rs  album.rs  apikey.rs  artist.rs  charts.rs  dropbox.rs  feed.rs  googledrive.rs  graph.rs  library.rs  like.rs  mirror.rs  player.rs  playlist.rs  playlist_item.rs  radio.rs  rockbox.rs  scrobble.rs  shout.rs  song.rs  spotify.rs  stats.rs
crates/rocksky-sdk/src/com_atproto/: repo.rs
crates/rocksky-uniffi/: Cargo.toml
crates/rocksky-uniffi/src/: capi.rs  lib.rs
crates/rockskyd/: Cargo.toml
crates/rockskyd/src/: main.rs
crates/rockskyd/src/cmd/: analytics.rs  dropbox.rs  feed.rs  googledrive.rs  jetstream.rs  mirror.rs  mod.rs  navidrome.rs  playlist.rs  pull.rs  scrobbler.rs  spotify.rs  sync.rs  tracklist.rs  webscrobbler.rs
crates/scrobbler/: Cargo.toml  Dockerfile
crates/scrobbler/src/: auth.rs  cache.rs  events.rs  handlers.rs  lib.rs  main.rs  models.rs  params.rs  response.rs  rocksky.rs  scrobbler.rs  signature.rs  types.rs
crates/scrobbler/src/handlers/: mod.rs  scrobble.rs
crates/scrobbler/src/listenbrainz/: handlers.rs  mod.rs  submit.rs  types.rs  (+1 more)
crates/spotify/: .env.example  Cargo.toml  Dockerfile
crates/spotify/src/: cache.rs  lib.rs  main.rs  rocksky.rs  token.rs
crates/storage/: Cargo.toml  Dockerfile
crates/storage/src/: main.rs  server.rs
crates/tracklist/: Cargo.toml  Dockerfile
crates/tracklist/src/: lib.rs  queue.rs  server.rs  types.rs
crates/webscrobbler/: Cargo.toml  Dockerfile
crates/webscrobbler/src/: auth.rs  consts.rs  events.rs  handlers.rs  lib.rs  main.rs  rocksky.rs  scrobbler.rs  types.rs
sdk/python/: .gitignore  README.md  build-core.sh  pyproject.toml
sdk/python/examples/: follow_feed.py  native_core.py  quickstart.py  scrobble.py  search.py  stories.py  with_builder.py  wrapped.py
sdk/python/tests/: conftest.py  test_actor.py  test_apikey.py  test_builder.py  test_charts.py  test_client.py  test_errors.py  test_feed.py  test_models.py  test_retries_and_hooks.py  test_scrobble.py  test_song.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: follow_feed.rs  quickstart.rs  scrobble.rs  search.rs  stories.rs  wrapped.rs
sdk/rust/src/: client.rs  error.rs  generated.rs  http.rs  lib.rs  models.rs
sdk/rust/tests/: actor.rs  client.rs  errors.rs  feed.rs  models.rs  scrobble.rs  song.rs
(+3510 files in other folders)
