[workspace]
default-members = ["crates/*"]
members = [
  "crates/*"
]
resolver = "2"

[workspace.package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io"]
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/tsirysndr/rocksky"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

