[package]
name = "analytics"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duckdb = { version = "1.2.0", features = ["chrono"] }
async-nats = "0.39.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
owo-colors = "4.1.0"
dotenv = "0.15.0"
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = "1.0.96"
polars = "0.46.0"
clap = "4.5.31"
actix-web = "4.9.0"
futures-util = "0.3.31"
