[package]
name = "connect"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tungstenite = { version = "0.26.2", features = ["rustls"] }
tokio-tungstenite = { version = "0.26.2", features = [
  "tokio-rustls",
  "rustls-tls-webpki-roots",
] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
tokio = { version = "1.45.1", features = ["full"] }
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
owo-colors = "4.2.1"
anyhow = "1.0.98"
async-trait = "0.1.88"
reqwest = { version = "0.12.15", features = [
  "rustls-tls",
  "json",
], default-features = false }
jsonrpsee = { version = "0.25.1", features = ["client", "tokio"] }
http = "1.3.1"
base64 = "0.22.1"
