[package]
name = "rocksky-feed"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
warp = "0.3.7"
owo-colors = "4.1.0"
anyhow = "1.0.100"
atrium-api = "0.25.5"
atrium-xrpc-client = "0.5.14"
chrono = { version = "= 0.4.39", features = ["serde"] }
duckdb = { version = "1.2.0", features = ["chrono"] }
reqwest = { version = "0.12.12", features = [
  "rustls-tls",
  "json",
  "multipart",
], default-features = false }
serde = "1.0.227"
serde_json = "1.0.145"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
tungstenite = { version = "0.26.2", features = ["rustls"] }
tokio-tungstenite = { version = "0.26.2", features = [
  "tokio-rustls",
  "rustls-tls-webpki-roots",
] }
tokio-stream = { version = "0.1.17", features = ["full"] }
async-trait = "0.1.89"
xid = "1.1.1"
sha256 = "1.6.0"
r2d2 = "0.8.10"
