[package]
name = "jetstream"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = { version = "= 0.4.39", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tungstenite = { version = "0.26.2", features = ["rustls"] }
tokio-tungstenite = { version = "0.26.2", features = [
  "tokio-rustls",
  "rustls-tls-webpki-roots",
] }
url = "2.5.4"
owo-colors = "4.1.0"
dotenv = "0.15.0"
tokio-stream = { version = "0.1.17", features = ["full"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
async-nats = "0.39.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = [
  "rustls-tls",
  "json",
], default-features = false }
sha256 = "1.6.0"
