[package]
name = "rocksky-mirror"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
async-nats = "0.39.0"
base64 = "0.22.1"
chrono = { version = "= 0.4.39", features = ["serde"] }
dotenv = "0.15.0"
dryoc = "0.6.2"
futures-util = "0.3.31"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
owo-colors = "4.1.0"
reqwest = { version = "0.12.12", features = [
  "rustls-tls",
  "json",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = [
  "tokio-rustls",
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
