[package]
name = "rocksky-navidrome"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
owo-colors = "4.1.0"
dotenv = "0.15.0"
anyhow = "1.0.96"
actix-web = "4.9.0"
actix-cors = "0.7.1"
chrono = { version = "= 0.4.39", features = ["serde"] }
tracing = "0.1.41"
md5 = "0.7.0"
hex = "0.4.3"
quick-xml = { version = "0.37.4", features = ["serialize"] }
futures = "0.3"
reqwest = { version = "0.12.12", features = [
  "rustls-tls",
  "stream",
  "json",
], default-features = false }
rust-s3 = { version = "0.35.1", features = [
  "tokio-rustls-tls",
], default-features = false }
jsonwebtoken = "9.3.0"
