[package]
name = "rocksky-pgpull"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "= 0.4.39", features = ["serde"] }
owo-colors = "4.1.0"
anyhow = "1.0.96"
tracing = "0.1.41"
