[package]
name = "raichu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
symphonia = { version = "0.5.4", features = ["all"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
] }
serde_json = "1.0.140"
base64 = "0.22.1"
