[package]
name = "rocksky-nif"
version = "0.2.0"
edition = "2021"
description = "Erlang NIF (Rustler) bindings for rocksky-sdk — powers the Erlang, Elixir & Gleam SDKs"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rocksky_nif"
crate-type = ["cdylib"]

[dependencies]
rocksky-sdk = { path = "../rocksky-sdk" }
rustler = "0.34"
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
serde = "1"
serde_json = "1"
tracing = { version = "0.1", optional = true }

[features]
default = ["dedup", "jetstream"]
# Mirror the dedup / jetstream index into the NIF (RocksDB + firehose).
dedup = ["rocksky-sdk/dedup"]
jetstream = ["rocksky-sdk/jetstream", "dep:tracing"]
