[package]
name = "rocksky-uniffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings core for rocksky-sdk — one Rust core powering the Python, Ruby & Clojure SDKs"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# cdylib: the native artifact each language loads. lib: so the uniffi-bindgen
# binary (below) can link the crate in library mode to generate bindings.
crate-type = ["cdylib", "lib"]
name = "rocksky_uniffi"

[dependencies]
rocksky-sdk = { path = "../rocksky-sdk" }
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
thiserror = "2"
# For the plain C ABI (used by the fiddle-based Ruby SDK and, later, Clojure/Panama).
serde = "1"
serde_json = "1"

[[bin]]
# `cargo run --bin uniffi-bindgen -- generate --library <cdylib> --language python`
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
default = []
dedup = ["rocksky-sdk/dedup"]
jetstream = ["rocksky-sdk/jetstream"]
