[package]
name = "spotify"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spotify"
path = "src/main.rs"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.96"
async-nats = "0.39.0"
chrono = { version = "0.4.39", features = ["serde"] }
ctr = "0.9.2"
dotenv = "0.15.0"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
owo-colors = "4.1.0"
redis = "0.29.0"
reqwest = { version = "0.12.12", features = [
  "rustls-tls",
  "json",
  "multipart",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
