[package]
name = "rocksky-tracklist"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
redis = { version = "0.29.0", features = ["tokio-rustls-comp"] }
owo-colors = "4.1.0"
anyhow = "1.0.96"
async-nats = "0.39.0"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
actix-web = "4.9.0"
polars = "0.46.0"
clap = "4.5.31"
rand = "0.9.2"
uuid = { version = "1.18.0", features = ["v4"] }
tracing = "0.1.41"
