[package]
name = "rocksky-webscrobbler"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "derive",
  "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
owo-colors = "4.1.0"
dotenv = "0.15.0"
anyhow = "1.0.96"
actix-web = "4.9.0"
redis = "0.29.0"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
md5 = "0.7.0"
reqwest = { version = "0.12.12", features = [
  "rustls-tls",
  "json",
  "multipart",
], default-features = false }
chrono = { version = "= 0.4.39", features = ["serde"] }
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.9.0"
tokio-stream = { version = "0.1.17", features = ["full"] }
actix-session = "0.10.1"
actix-limitation = "0.5.1"
tracing = "0.1.41"
nanoid = "0.4.0"

[dev-dependencies]
serial_test = "3.0.0"
