[project]
name = "rocksky"
version = "0.3.0"
description = "Async Python SDK for the Rocksky XRPC API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rocksky" }]
requires-python = ">=3.10"
keywords = ["rocksky", "atproto", "bluesky", "scrobble", "lastfm", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "typing-extensions>=4.10.0",
]

[project.urls]
Homepage = "https://rocksky.app"
Documentation = "https://docs.rocksky.app"
Repository = "https://github.com/tsirysndr/rocksky"
Issues = "https://github.com/tsirysndr/rocksky/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rocksky"]
# Ship the native-core download manifest, but NOT the native lib itself — the
# wheel is pure-Python and fetches the ~14 MB lib on first import (see
# rocksky/core/_native.py). A gitignored local dev build must be force-excluded.
artifacts = ["src/rocksky/core/manifest.json"]
exclude = [
    "src/rocksky/core/*.so",
    "src/rocksky/core/*.dylib",
    "src/rocksky/core/*.dll",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true
